# surfel_unknown_space

./: LICENSE.txt  README.md
surfels_unknown_space/: CMakeLists.txt  package.xml
surfels_unknown_space/src/: surfels_unknown_space.cpp  surfels_unknown_space.h  surfels_unknown_space_node.cpp  surfels_unknown_space_node.h  surfels_unknown_space_node_h.h  surfels_unknown_space_opencl.cpp  surfels_unknown_space_visualization.cpp  timer_def.h  timer_stub.h
surfels_unknown_space/surfels_unknown_space_lib/: CMakeLists.txt  README.md
surfels_unknown_space_msgs/: CMakeLists.txt  package.xml
surfels_unknown_space_msgs/action/: GetSurfelCloud.action  GetTimers.action  SetSurfelCloud.action
surfels_unknown_space_msgs/msg/: FrameState.msg
surfels_unknown_space_state_image_reader/: CMakeLists.txt  README.md  package.xml
surfels_unknown_space_state_image_reader/launch/: test.launch
surfels_unknown_space_state_image_reader/src/: state_image_reader.cpp  state_image_reader.h
